[v0.3.0] add tests with testthat + add add_plot_white feature and remove forced theme for add_plot

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,33 @@
+inst/doc
+
+# R file
 .Rproj.user
 .Rhistory
 .RData
 .Ruserdata
-inst/doc
+.Rprofile
+
+# Mac
+.DS_Store
+
+# Tags
+*tags
+
+# Logs
+*.log
+logs/
+benchmark
+
+# Open cached files
+*.m~
+*.*swp
+*.*swo
+~$*.*pptx
+
+# Compiled sources
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
